--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
@@ -39,6 +39,7 @@
     </main>
 
     <!-- scripts -->
+    <script src="https://unpkg.com/@hop-protocol/sdk@latest/hop.js"></script>
     <script src="script.js" type="module"></script>
   </div>
   </body>
