--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=cyrillic" rel="stylesheet" />
-    <title>DeLend | Lending Aggregation App</title>
+    <title>Diffuse | Lending Aggregation App</title>
     <style>
       /* width */
       ::-webkit-scrollbar {
